# PhotoShare_Nagini-team

./: .buildinfo  .env  .env.example  .gitignore  README.md  alembic.ini  genindex.html  index.html  main.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  test.db  test.py  test_photos.py
_sources/: index.rst.txt
alembic/: env.py
alembic/versions/: 100eb9aacc0d_add_roles_enum.py  19481ccfad09_create_user_and_photo_tables.py  22ddadd022a9_initial_migration.py  24e6923c637c_new__models.py  322634130de0_add_transform.py  3deda4152052_upgrade_models.py  3fc93407449d_removed_refresh_tokens.py  40699d382474_is_active_in_db.py  4f79c2715c98_init.py  50077d3469d6_міграція_для_фото.py  60c79cdcc9f6_added_image_transform_column.py  6775a9e306a7_.py  6f5010e8a22a_new__models.py  777e587fcaab_upgrade_models.py  84c8a940cdc5_images.py  937d8f9b12be_upgrade_model_tag.py  9df9251e7880_init.py  a4ac210afb75_.py  b74f329aa478_update_model_photo.py  b95b4a374f1e_upgrade_models.py  c2f6894ccf07_us_ph_co_t.py  cca275410ff8_a_p_c_tag_trans.py  d3809c8911d1_назва_вашої_міграції.py  dd4a467b34d2_update_user_model.py  e7eece9bb2bd_initial_migration.py  ea83475987d1_added_roles.py  f8a81779db51_change_roles_type.py
docs/: conf.py
src/: schemas.py  test.db  utils.py
src/authentication/: app.py  auth.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/models/: image.py
src/repository/: comments.py  photos.py  tags.py  users.py
src/routes/: auth.py  comments.py  images.py  photos.py  (+2 more)
tests/: conftest.py  test_users.py
(+12 files in other folders)
